--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
       <div class="button toggle">Blog post</div>
       <div class="slidedown">
         <div class="description">
-          <h2>Blog post title</h2>
-          <p>Here, add a short but appealing description of your blog post.</p>
-          <a href="#" class="external-link" target="_blank">Read</a>
+          <h2>How Streaming Services Changed the Way We Watch TV</h2>
+          <p>How TV is dying and how Streaming services play a part in that</p>
+          <a href="https://medium.com/@hasanlm23123/how-streaming-services-changed-the-way-we-watch-tv-02153314566f" class="external-link" target="_blank">Read</a>
         </div>
       </div>
 
