--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </div>
 
     <div class="links-container">
-      <a href="https://drive.google.com" class="button" target="_blank">Resume</a>
+      <a href="https://drive.google.com/file/d/1s-2w4alWrtRHwkzKIGjsGDEZvI_cIA9l/view?usp=sharing" class="button" target="_blank">Resume</a>
     </div>
 
   </div>
