--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <img src="images/portrait.jpg" alt="Photo by Art Hauntington">
     </div>
     <div class="intro">
-      I'm <span class="name"><strong>Labib Hasan</strong></span>, a writer and musician. You guys seen Twin Peaks?
+      I'm <span class="name"><strong>Labib Hasan</strong></span>, a sophmore and comp sci major.
     </div>
     <div class="section-header">
       <h1>My work</h1>
@@ -46,9 +46,9 @@
       <div class="button toggle">Podcast</div>
       <div class="slidedown">
         <div class="description">
-          <h2>Podcast title</h2>
-          <p>Add a short but appealing description of your podcast</p>
-          <a href="#" class="external-link" target="_blank">Listen</a>
+          <h2>Yik Yak Podcast</h2>
+          <p>A group podcast about yik yak and how its changed college</p>
+          <a href="https://soundcloud.com/annacarolinef/yikyak-diving-into-the-anonymous-social-media-platform-circling-college-campus" class="external-link" target="_blank">Listen</a>
         </div>
       </div>
     </div>
