--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
   <div class="container">
     <!-- Image and name container. Put your replacement photo—which you should crop to be square—in the images folder, then change the source attribute to images/yourportraitfilename.jpg. This path says, "Look in the images folder for yourportraitfilename.jpg." Be sure to change the alt text, too. -->
     <div class="image-container">
-      <img src="images/portrait.jpg" alt="Photo by Art Hauntington">
+      <img src="images/soccerBall.jpg" alt="Soccer Ball">
     </div>
     <div class="intro">
-      I'm <span class="name"><strong>Labib Hasan</strong></span>, a sophmore and comp sci major.
+    <span class="name"> Hello, I am <strong>Labib Hasan</strong></span> a Sophmore at Virginia Tech studying Computer Science.
     </div>
     <div class="section-header">
       <h1>My work</h1>
@@ -40,9 +40,9 @@
       <div class="button toggle">Video</div>
       <div class="slidedown">
         <div class="description">
-          <h2>Video title</h2>
-          <p>Add a short but appealing description of your video.</p>
-          <a href="#" class="external-link" target="_blank">Watch</a>
+          <h2>Palindrome Tutorial Python</h2>
+          <p>A short tutorial on coding a palindrome function in python.</p>
+          <a href="https://youtu.be/msgBGwi-4tk" class="external-link" target="_blank">Watch</a>
         </div>
       </div>
 
@@ -62,7 +62,7 @@
     </div>
 
     <div class="links-container">
-      <a href="https://drive.google.com/file/d/1s-2w4alWrtRHwkzKIGjsGDEZvI_cIA9l/view?usp=sharing" class="button" target="_blank">Resume</a>
+      <a href="www.linkedin.com/in/labib-hasan-970874296" class="button" target="_blank">Linkedin</a>
     </div>
 
   </div>
