--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
       <div class="slidedown">
         <div class="description">
           <h2>Yik Yak Podcast</h2>
-          <p>A group podcast about yik yak and how its changed college</p>
+          <p>A group podcast about Yik Yak and we
+             explore the app that changed college life for the better or perhaps worse</p>
           <a href="https://soundcloud.com/annacarolinef/yikyak-diving-into-the-anonymous-social-media-platform-circling-college-campus" class="external-link" target="_blank">Listen</a>
         </div>
       </div>
