--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </div>
 
     <div class="links-container">
-      <a href="www.linkedin.com/in/labib-hasan-970874296" class="button" target="_blank">Linkedin</a>
+      <a href="https://www.linkedin.com/in/labib-hasan-970874296" class="button" target="_blank">Linkedin</a>
     </div>
 
   </div>
