--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!-- This page is adapted from w3schools "How to make a link tree website https://www.w3schools.com/howto/howto_website_create_linktree.asp" -->
 <html lang="en">
 
 <head>
@@ -68,8 +67,7 @@
 
   </div>
   <div class="footer">
-    <p>© Labib Hasan, 2024. Based on a design by <a
-        href="https://www.w3schools.com/howto/howto_website_create_linktree.asp" target="_blank">w3schools</a>.
+    <p>© Labib Hasan, 2024. Based on a design by
     </p>
   </div>
   <script type="text/javascript" src="js/slider.js"></script>
