--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div class="container">
     <!-- Image and name container. Put your replacement photo—which you should crop to be square—in the images folder, then change the source attribute to images/yourportraitfilename.jpg. This path says, "Look in the images folder for yourportraitfilename.jpg." Be sure to change the alt text, too. -->
     <div class="image-container">
-      <img src="images/soccerBall.jpg" alt="Soccer Ball">
+      <img src="images/image.jpg" alt="Picture">
     </div>
     <div class="intro">
     <span class="name"> Hello, I am <strong>Labib Hasan</strong></span> a Sophmore at Virginia Tech studying Computer Science.
