--- a/index.html
+++ b/index.html
@@ -27,11 +27,10 @@
     </div>
     <!-- Replace the # inside of the href="#" with your links. -->
     <div class="links-container">
-      <div class="button toggle">Blog post</div>
+      <div class="button toggle">Python Dodge Game</div>
       <div class="slidedown">
         <div class="description">
-          <h2>How Streaming Services Changed the Way We Watch TV</h2>
-          <p>How TV is dying and how Streaming services play a part in that</p>
+          <h2>Small 2D game coded in python</h2>
           <a href="https://medium.com/@hasanlm23123/how-streaming-services-changed-the-way-we-watch-tv-02153314566f" class="external-link" target="_blank">Read</a>
         </div>
       </div>
@@ -45,12 +44,10 @@
         </div>
       </div>
 
-      <div class="button toggle">Podcast</div>
+      <div class="button toggle">Python Space Shooter</div>
       <div class="slidedown">
         <div class="description">
-          <h2>Yik Yak Podcast</h2>
-          <p>A group podcast about Yik Yak and we
-             explore the app that changed college life for the better or perhaps worse</p>
+          <h2>Small 2D game coded in python</h2>
           <a href="https://soundcloud.com/annacarolinef/yikyak-diving-into-the-anonymous-social-media-platform-circling-college-campus" class="external-link" target="_blank">Listen</a>
         </div>
       </div>
