--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 </head>
 
 <body class="main-text-color">
+  <div class="contact-info">
+    <span>Phone: (123) 456-7890 | Email: example@email.com</span>
+  </div>
   <!-- Content container. Everything except footer goes here -->
   <div class="container">
     <!-- Image and name container. Put your replacement photo—which you should crop to be square—in the images folder, then change the source attribute to images/yourportraitfilename.jpg. This path says, "Look in the images folder for yourportraitfilename.jpg." Be sure to change the alt text, too. -->
@@ -31,7 +34,7 @@
       <div class="slidedown">
         <div class="description">
           <h2>Small 2D game coded in python</h2>
-          <a href="https://medium.com/@hasanlm23123/how-streaming-services-changed-the-way-we-watch-tv-02153314566f" class="external-link" target="_blank">Read</a>
+          <a href="https://medium.com/@hasanlm23123/how-streaming-services-changed-the-way-we-watch-tv-02153314566f" class="external-link" target="_blank">Play!</a>
         </div>
       </div>
 
@@ -48,7 +51,7 @@
       <div class="slidedown">
         <div class="description">
           <h2>Small 2D game coded in python</h2>
-          <a href="https://soundcloud.com/annacarolinef/yikyak-diving-into-the-anonymous-social-media-platform-circling-college-campus" class="external-link" target="_blank">Listen</a>
+          <a href="https://soundcloud.com/annacarolinef/yikyak-diving-into-the-anonymous-social-media-platform-circling-college-campus" class="external-link" target="_blank">Play!</a>
         </div>
       </div>
     </div>
