--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body class="main-text-color">
   <div class="contact-info">
-    <span>Phone: (123) 456-7890 | Email: example@email.com</span>
+    <span>Phone: 571-318-4820 | Email: Hasanlm23123@gmail.com</span>
   </div>
   <!-- Content container. Everything except footer goes here -->
   <div class="container">
