--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <img src="images/SelfPortrait.png">
     </div>
     <div class="intro">
-    <span class="name"> Hello, I am <strong>Labib Hasan</strong></span> a Sophmore at Virginia Tech studying Computer Science.
+    <span class="name"> Hello, I am Labib Hasan</span> a Sophmore at Virginia Tech studying Computer Science.
     </div>
     <div class="section-header">
       <h1>My work</h1>
