--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <div class="slidedown">
         <div class="description">
           <h2>Small 2D game coded in python</h2>
-          <a href="https://medium.com/@hasanlm23123/how-streaming-services-changed-the-way-we-watch-tv-02153314566f" class="external-link" target="_blank">Play!</a>
+          <a href="https://github.com/Hasanlm23123/PythonDodgeGame" class="external-link" target="_blank">Play!</a>
         </div>
       </div>
 
@@ -51,7 +51,7 @@
       <div class="slidedown">
         <div class="description">
           <h2>Small 2D game coded in python</h2>
-          <a href="https://soundcloud.com/annacarolinef/yikyak-diving-into-the-anonymous-social-media-platform-circling-college-campus" class="external-link" target="_blank">Play!</a>
+          <a href="https://github.com/Hasanlm23123/PythonSpaceShooter" class="external-link" target="_blank">Play!</a>
         </div>
       </div>
     </div>
